--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page" routerLink="productos" routerLinkActive="active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Agregar Producto</a>
+            <a class="nav-link" routerLink="agregar-producto" routerLinkActive="active">Agregar Producto</a>
           </li>
 
         </ul>
