--- a/src/app/producto-list/producto-list.component.html
+++ b/src/app/producto-list/producto-list.component.html
@@ -10,6 +10,8 @@
         <th scope="col">Descripcion</th>
         <th scope="col">Precio</th>
         <th scope="col">Existencia</th>
+        <th scope="col">Editar</th>
+
       </tr>
     </thead>
     <tbody>
@@ -18,6 +20,14 @@
         <td>{{producto.descripcion}}</td>
         <td>{{producto.precio}}</td>
         <td>{{producto.existencia}}</td>
+        <td class="text-center">
+          <div>
+            <button (click)="editarProductor(producto.idProducto)" class="btn btn-warning btn-sm me-3" >Editar</button>
+            <button (click)="eliminarProducto(producto.idProducto)" class="btn btn-danger btn-sm me-3" >Eliminar</button>
+
+          </div>
+        </td>
+
       </tr>
 
     </tbody>
